* Added $PROCESSSTARTTIME$ macro
* If not specified, host address and alias now default to host name
* Extended ASCII characters no longer auto-stripped from object names and macros
* Added external commands to adjust host and service notification numbers
* Init script changes
* Fixed bug where passive checks with empty plugin output were being dropped



2.0b2 - 02/09/2005
------------------
* Fixed bug with cleaning macro contents
* Minor doc updates and fixes
* Init script mods
* Fixed bug in macro routines
* Changed library ordering in GD configure script tests
* Increased command buffer from 4K to 32K
* Added ability to report on soft problem states in avail and trends CGIs
* Fixed bug with hard service problems being reported as soft after host recoveries
* Fixed bug with current attempt number during scheduled host checks
* Fixed macro processing bug
* Fixed bug where GUI didn't show UNREACHABLE hosts properly
* Event broker bug fixes
* Removed (un)setenv() calls for systems that don't support it
* Fixed problem with installing sample config files
* Sample config file fix
* RPM spec file updates
* Embedded Perl fixes (updated p1.pl and mini_epn)



2.0b1 - 12/15/2004
------------------
* Added triggered downtime
* Basic adaptive monitoring features
* Added ability to retain scheduling information
* Change in hostgroup authorization (need to be authorized for all member hosts)
* Host dependencies are now checked before service notifications are sent out
* Added on-demand host/service macros (i.e. $VARIABLE:host:service$)
* Added notes and action_url directives to extended host/service definitions
* Added inherits_parent flag to host and service dependencies
* Added servicegroups
* Added host freshness checking
* Changed way in which initial states are logged
* Added timeperiods and state options to escalation definitions
* Added hostgroups directive to host definitions
* Extended host/service info definitions are now stored in standard object
  config files