@@ -78,7 +78,7 @@ define servicedependency{
 	dependent_host_name		Host C
 	dependent_service_description	Service F
 	execution_failure_criteria	o
-	notification_failure_criteria	n
+	notification_failure_criteria	w,u
 	}
 
 define servicedependency{
