@@ -137,7 +137,7 @@ Next, add the users that your web server and Nagios run as to the newly created 
 </p>
 
 <p>
-<font color="red">/usr/sbin/usermod -G nagcmd apache</font>
+<font color="red">/usr/sbin/usermod -G nagcmd apache</font><br>
 <font color="red">/usr/sbin/usermod -G nagcmd nagios</font><br>
 </p> 
 
